WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285544
[bmalloc] Fix misalignment issue for seedPtr in TZoneHeapManager::init()
https://bugs.webkit.org/show_bug.cgi?id=285544
Summary
[bmalloc] Fix misalignment issue for seedPtr in TZoneHeapManager::init()
Yijia Huang
Reported
2025-01-07 11:03:01 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-07 11:03:13 PST
<
rdar://problem/142489488
>
Yijia Huang
Comment 2
2025-01-07 11:10:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38666
EWS
Comment 3
2025-01-07 14:11:15 PST
Committed
288562@main
(7536af6d6736): <
https://commits.webkit.org/288562@main
> Reviewed commits have been landed. Closing PR #38666 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug