[bmalloc] Fix misalignment issue for seedPtr in TZoneHeapManager::init() https://bugs.webkit.org/show_bug.cgi?id=285544 rdar://142489488

Reviewed by Yusuke Suzuki.

The 8-byte pointer `seedPtr` in TZoneHeapManager::init() is used
to copy 8 bytes from `seed` each time. This patch ensures that `seed`
is 8-byte aligned to mitigate the misalignment issue and prevent
undefined behavior during pointer dereferencing.

* Source/bmalloc/bmalloc/TZoneHeapManager.cpp:
(bmalloc::api::TZoneHeapManager::init):

Canonical link: https://commits.webkit.org/288562@main